--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sito-mui-error-component",
-  "version": "0.3.4",
+  "version": "0.3.5",
+  "private": false,
   "description": "sito mui error component with react error boundary",
   "main": "dist/index.js",
   "scripts": {
