--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sito-mui-error-component",
-  "version": "0.3.9",
+  "version": "0.4.1",
   "private": false,
   "description": "sito mui error component with react error boundary",
   "main": "dist/index.js",
@@ -31,9 +31,10 @@
     "some-javascript-utils": "^0.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.7",
     "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.20.7",
     "@babel/preset-react": "^7.16.7",
+    "babel-plugin-direct-import": "^1.0.0",
     "babel-preset-minify": "^0.5.2"
   }
 }
